# tron-safecode-agent

./: .env.example  README.md  pyproject.toml
.claude/: settings.json
tests/: test_tron_agent.py
tron_agent/: __init__.py  agent.py  cli.py  config.py  orchestrator.py
tron_agent/adapters/: claude_code.py  feedback.py  wrapper.py
tron_agent/policies/: __init__.py  default.yaml
