[project]
name = "tron-safecode-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.1.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
tron-agent = "tron_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
tron_agent = ["policies/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
